# interlinear-translation

./: LICENSE  README.md  citation.cff
code/: README.md  pyproject.toml
code/kairos/: batch_size_settings.py  benchmark.py  config.py  main.py  neptune_utils.py  parser.py
code/kairos/data/: checksum.py  formatters.py  main.py  morph_tokenizer.py  sentinel_tokens.py  tokenize.py  utils.py
code/kairos/evaluation/: compute_text_metrics.py  external_metrics.py  main.py  metrics.py  store_intermediate_results.py  utils.py
code/kairos/models/: generation.py  main.py  modeling_morph_mt5.py
code/kairos/training/: main.py  morph_data_collator.py  morph_trainer.py  morph_trainer_callback.py
code/kairos/utils/: common.py
morpht5/: pyproject.toml
morpht5/tests/: test_inference_example_from_hf.py
resources/: model_table_en.md  model_table_pl.md  results.tsv
