[project]
name = "morpht5"
version = "0.2.2"
description = "A morphologically aware version of T5 model."
authors = [{ name = "Maciej Rapacz", email = "mrapacz@agh.edu.pl" }]
requires-python = "~=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "transformers>=4,<5",
    "torch>=2,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "ipdb>=0.13.13,<0.14",
    "ipython>=8.32.0,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
